--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="40dp"/>
-    <gradient android:startColor="@color/colorPrimary"
+    <gradient
+        android:angle="270"
+        android:startColor="@color/colorAccent"
+        android:centerColor="@color/colorPrimary"
         android:endColor="@color/colorPrimaryDark"/>
 </shape>
