--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">/>
-    <gradient android:startColor="@color/colorPrimary"
+    <gradient
+        android:angle="270"
+        android:startColor="@color/colorAccent"
+        android:centerColor="@color/colorPrimary"
         android:endColor="@color/colorPrimaryDark"/>
 </shape>
