--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -6,17 +6,55 @@
     android:layout_height="match_parent"
     tools:context=".MapsActivity">
 
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbarVf"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        map:layout_constraintEnd_toEndOf="parent"
+        map:layout_constraintStart_toStartOf="parent"
+        map:layout_constraintTop_toTopOf="parent">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/backButton"
+                android:src="@drawable/ic_baseline_arrow_back_white_ios_24"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:textStyle="bold"
+                android:layout_centerHorizontal="true"
+                android:textColor="@color/colorWhite2"
+                android:textSize="18sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Search Result"
+                />
+
+        </RelativeLayout>
+
+    </androidx.appcompat.widget.Toolbar>
+
+
     <fragment
         android:id="@+id/map"
+        map:layout_constraintTop_toBottomOf="@+id/toolbarVf"
+        map:layout_constraintEnd_toEndOf="parent"
+        map:layout_constraintStart_toStartOf="parent"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        map:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="0dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/retaileRecyclerView"
         android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:layout_height="105dp"
         map:layout_constraintBottom_toBottomOf="parent"
         map:layout_constraintEnd_toEndOf="parent"
         map:layout_constraintStart_toStartOf="parent"
